# submission-checker

./: .gitignore  README.md  pyproject.toml
src/submission_checker/: checker.py
src/submission_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_checker.py
